--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "stereoseq-to-adata"
-version = "0.1.0"
+version = "0.1.1"
 description = "Quickly convert parquet files exported from stereo-seq to adata format and add appropriate metadata"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -13,7 +13,7 @@ dependencies = [
 authors = [
     {name = "myuan"},
 ]
-license = {file = "LICENCE"}
+license = {text = "MIT"}
 
 [project.urls]
 "GitHub" = "https://github.com/myuanz/stereoseq-to-adata"
