--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "stereoseq-to-adata"
-version = "0.1.1"
+version = "0.2.0"
 description = "Quickly convert parquet files exported from stereo-seq to adata format and add appropriate metadata"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -32,9 +32,15 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/s2a"]
+exclude = [
+    ".vscode",
+]
 
 [tool.hatch.build.targets.sdist]
 ignore-vcs = true
+exclude = [
+    ".vscode",
+]
 
 [tool.uv]
 package = true
